# bypass_dlfunctions

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sample.cpp
app/src/main/java/com/example/bypass/dlfunctions/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  bypass_dlfcn.c  efl_parser.c
